<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.conta.Conta">

    <include
    android:id="@+id/conta_barra"
    layout="@layout/barra_principal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/conta_barra"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/conta_imagem"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="0dp"
                android:background="@drawable/img03"
                android:padding="15dp"
                android:src="@drawable/default_avatar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conta_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/conta_imagem"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/conta_input_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_nome"
            android:inputType="textPersonName"
            android:maxLength="22"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conta_apelido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conta_nome"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/conta_input_apelido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_apelido"
            android:inputType="textPersonName"
            android:maxLength="22"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conta_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conta_apelido"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/conta_input_estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_estado"
            android:inputType="textPersonName"
            android:maxLength="60"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conta_provincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conta_estado"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/conta_input_provincia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_provincia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conta_spinner_provincia" />

        <Spinner
            android:id="@+id/conta_spinner_provincia"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conta_residencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conta_provincia"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/conta_input_residencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_residencia"
            android:inputType="textPersonName"
            android:maxLength="22"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/conta_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/conta_residencia"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                tools:ignore="MissingConstraints">

                <RadioGroup
                    android:id="@+id/conta_input_sexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/conta_btn_feminino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:hint="@string/txt_input_feminino"/>

                    <RadioButton
                        android:id="@+id/conta_btn_masculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:hint="@string/txt_input_masculino" />
                </RadioGroup>

            </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conta_pac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conta_sexo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/conta_input_pac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_pac"
            android:inputType="number"
            android:maxLength="6"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conta_bi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conta_pac"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/conta_input_bi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_bi"
            android:inputType="textPersonName"
            android:maxLength="14"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conta_nascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conta_bi"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/conta_input_nascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_nascimento"
            android:inputType="date"
            android:maxLength="10"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conta_nascimento"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/conta_sessao_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="Terminar sessão"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/conta_sessao_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/conta_sessao_titulo"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/conta_sessao_subtitulo_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/conta_diver"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="5dp"
                    android:text="Remover os dados da conta no dispositivo"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/conta_sessao_terminar"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="SAIR"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/conta_sessao_subtitulo_text"
                    tools:ignore="MissingConstraints" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

</RelativeLayout>
    </ScrollView>

    </RelativeLayout>